--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "font-awesome": "^4.7.0",
+    "hover.css": "^2.2.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0",
+    "react-scrollable-anchor": "^0.5.0",
     "react-test-renderer": "^16.2.0"
   },
   "scripts": {
