--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-page-layout": "^0.9.8",
     "react-scripts": "1.1.0",
     "react-scrollable-anchor": "^0.5.0",
+    "react-sticky": "^6.0.1",
     "react-test-renderer": "^16.2.0",
     "react-transition-group": "^2.2.1"
   },
