--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.6.1",
     "emailjs-com": "^1.5.14",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "font-awesome": "^4.7.0",
     "hover.css": "^2.2.1",
     "react": "^16.2.0",
+    "react-animate-on-scroll": "^2.0.0",
     "react-dom": "^16.2.0",
     "react-headroom": "^2.2.2",
     "react-icons": "^2.2.7",
