--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^2.2.7",
     "react-motion": "^0.5.2",
     "react-page-layout": "^0.9.8",
+    "react-recaptcha": "^2.3.7",
     "react-scripts": "1.1.0",
     "react-scrollable-anchor": "^0.5.0",
     "react-sticky": "^6.0.1",
