--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "animate.css": "^3.6.1",
+    "axios": "^0.18.0",
     "emailjs-com": "^1.5.14",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
