--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "dependencies": {
     "animate.css": "^3.6.1",
     "axios": "^0.18.0",
+    "compression": "^1.7.2",
     "emailjs-com": "^1.5.14",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "express": "^4.16.3",
+    "file-loader": "^1.1.11",
     "font-awesome": "^4.7.0",
     "hover.css": "^2.2.1",
+    "morgan": "^1.9.0",
+    "node-fetch": "^2.1.1",
     "react": "^16.2.0",
     "react-animate-on-scroll": "^2.0.0",
     "react-dom": "^16.2.0",
@@ -22,7 +27,8 @@
     "react-scrollable-anchor": "^0.5.0",
     "react-sticky": "^6.0.1",
     "react-test-renderer": "^16.2.0",
-    "react-transition-group": "^2.2.1"
+    "react-transition-group": "^2.2.1",
+    "smtpapi": "^1.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
