Add sendgrid & env dependencies, delete emailjs

--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sendgrid/mail": "^6.2.1",
     "animate.css": "^3.6.1",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
     "combined-stream": "^1.0.6",
     "compression": "^1.7.2",
-    "emailjs-com": "^1.5.14",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "express": "^4.16.3",
@@ -17,8 +17,11 @@
     "font-awesome": "^4.7.0",
     "hover.css": "^2.2.1",
     "morgan": "^1.9.0",
+    "node-env-file": "^0.1.8",
+    "node-env-run": "^2.0.1",
     "node-fetch": "^2.1.1",
     "nodemailer": "^4.6.3",
+    "nodemailer-smtp-transport": "^2.7.4",
     "react": "^16.2.0",
     "react-animate-on-scroll": "^2.0.0",
     "react-dom": "^16.2.0",
