Add react-modal, lodash dependencies

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "font-awesome": "^4.7.0",
     "hover.css": "^2.2.1",
     "karma": "^2.0.0",
+    "lodash": "^4.17.5",
     "morgan": "^1.9.0",
     "node-env-file": "^0.1.8",
     "node-env-run": "^3.0.1",
@@ -31,6 +32,7 @@
     "react-dom": "^16.2.0",
     "react-headroom": "^2.2.2",
     "react-icons": "^2.2.7",
+    "react-modal": "^3.3.2",
     "react-motion": "^0.5.2",
     "react-page-layout": "^0.9.8",
     "react-recaptcha": "^2.3.7",
