--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
+    "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "classnames": "^2.2.5",
     "combined-stream": "^1.0.6",
     "compression": "^1.7.2",
@@ -25,7 +26,7 @@
     "node-env-run": "^3.0.1",
     "node-fetch": "^2.1.1",
     "nodemailer-smtp-transport": "^2.7.4",
-    "prop-types": "*",
+    "prop-types": "^15.6.1",
     "react": "16.2.0",
     "react-animate-on-scroll": "^2.0.0",
     "react-create-app": "2.0.6",
@@ -36,11 +37,16 @@
     "react-motion": "^0.5.2",
     "react-page-layout": "^0.9.8",
     "react-recaptcha": "^2.3.7",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
     "react-scrollable-anchor": "^0.6.1",
     "react-sticky": "^6.0.1",
     "react-test-renderer": "^16.2.0",
     "react-transition-group": "^2.2.1",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-thunk": "^2.2.0",
     "smtpapi": "^1.3.1",
     "webpack": "^4.2.0"
   },
