Add lodash + swipeable dependencies, implement on slider functions

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "font-awesome": "^4.7.0",
     "hover.css": "^2.2.1",
     "karma": "^2.0.0",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.10",
     "morgan": "^1.9.0",
     "node-env-file": "^0.1.8",
     "node-env-run": "^3.0.1",
@@ -42,6 +42,7 @@
     "react-scrollable-anchor": "^0.6.1",
     "react-snowflakes": "^1.0.0",
     "react-sticky": "^6.0.1",
+    "react-swipeable": "^4.3.0",
     "react-test-renderer": "^16.2.0",
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
