--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "israeldmatos.com",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://www.israeldmatos.com",
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
@@ -53,6 +54,7 @@
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.2.0",
     "smtpapi": "^1.3.1",
+    "styled-components": "^3.3.3",
     "webpack": "^4.2.0"
   },
   "scripts": {
