--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "webpack": "^4.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_ENV=production react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
