--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "animate.css": "^3.6.1",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "classnames": "^2.2.5",
@@ -57,7 +58,7 @@
     "webpack": "^4.2.0"
   },
   "scripts": {
-    "start": "NODE_ENV=production react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
