--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@sendgrid/mail": "^6.2.1",
     "animate.css": "^3.6.1",
     "axios": "^0.18.0",
+    "babel-core": "^6.26.3",
     "babel-polyfill": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
