--- a/package.json
+++ b/package.json
@@ -45,15 +45,18 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
     "react-scrollable-anchor": "^0.6.1",
+    "react-slick": "^0.23.1",
     "react-snowflakes": "^1.0.0",
     "react-sticky": "^6.0.1",
     "react-swipeable": "^4.3.0",
+    "react-swipeable-views": "^0.12.17",
     "react-test-renderer": "^16.2.0",
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.2.0",
+    "slick-carousel": "^1.8.1",
     "smtpapi": "^1.3.1",
     "styled-components": "^3.3.3",
     "webpack": "^4.2.0"
