--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "animate.css": "^3.6.1",
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "classnames": "^2.2.5",
@@ -32,7 +30,7 @@
     "node-fetch": "^2.1.1",
     "nodemailer-smtp-transport": "^2.7.4",
     "prop-types": "^15.6.1",
-    "react": "16.2.0",
+    "react": "16.3.0",
     "react-animate-on-scroll": "^2.0.0",
     "react-create-app": "2.0.6",
     "react-dom": "^16.2.0",
@@ -40,10 +38,9 @@
     "react-icons": "^2.2.7",
     "react-modal": "^3.3.2",
     "react-motion": "^0.5.2",
-    "react-page-layout": "^0.9.8",
     "react-recaptcha": "^2.3.7",
     "react-redux": "^5.0.7",
-    "react-scripts": "1.1.1",
+    "react-scripts": "2.1.8",
     "react-scrollable-anchor": "^0.6.1",
     "react-slick": "^0.23.1",
     "react-snowflakes": "^1.0.0",
@@ -58,13 +55,18 @@
     "redux-thunk": "^2.2.0",
     "slick-carousel": "^1.8.1",
     "smtpapi": "^1.3.1",
-    "styled-components": "^3.3.3",
-    "webpack": "^4.2.0"
+    "styled-components": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
