--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "animate.css": "^3.6.1",
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "classnames": "^2.2.5",
