--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-snowfall": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.17.5",
