--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "@vanilla-extract/css": "^1.17.1",
+    "framer-motion": "^12.10.1",
     "gatsby": "^5.8.0",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
