--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "@vanilla-extract/css": "^1.17.1",
     "framer-motion": "^12.10.1",
     "gatsby": "^5.8.0",
-    "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.13.1",
-    "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-plugin-sitemap": "^6.13.1",
-    "gatsby-source-filesystem": "^5.13.1",
-    "gatsby-transformer-sharp": "^5.13.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "gatsby-source-filesystem": "^5.14.0",
+    "gatsby-transformer-remark": "^6.14.0",
+    "gatsby-transformer-sharp": "^5.14.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-snowfall": "^2.1.1"
   },
   "devDependencies": {
@@ -38,5 +39,15 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3"
+  },
+  "resolutions": {
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-server-dom-webpack/react": "18.3.1"
+  },
+  "overrides": {
+    "react-server-dom-webpack": {
+      "react": "18.3.1"
+    }
   }
 }
