--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "@react-icons/all-files": "^4.1.0",
     "@vanilla-extract/css": "^1.17.1",
     "framer-motion": "^12.10.1",
