--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "keywords": [
     "gatsby"
   ],
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "gatsby develop",
     "start": "gatsby develop",
@@ -18,25 +21,29 @@
   "dependencies": {
     "@formspree/react": "^3.0.0",
     "@react-icons/all-files": "^4.1.0",
-    "@vanilla-extract/css": "^1.17.1",
     "framer-motion": "^12.10.1",
     "gatsby": "^5.8.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.13.1",
     "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-plugin-sitemap": "^6.13.1",
+    "gatsby-remark-images": "^7.14.0",
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-remark": "^6.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
     "react": "^18.3.1",
+    "react-animations": "^1.0.0",
     "react-dom": "^18.3.1",
-    "react-snowfall": "^2.2.0"
+    "react-snowfall": "^2.2.0",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@types/node": "^20.17.5",
     "@types/react": "^18.3.12",
+    "@types/react-animations": "^1.0.3",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.21",
+    "gatsby-plugin-netlify": "^5.1.1",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3"
