--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^18.3.1",
     "react-animations": "^1.0.0",
     "react-dom": "^18.3.1",
+    "react-scroll-parallax": "^3.4.5",
     "react-snowfall": "^2.2.0",
     "styled-components": "^6.1.18"
   },
